# apertium-fra-cat

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  SOURCES  TODO  apertium-fr-ca.ca-fr-poly.dix  apertium-fr-ca.ca-fr.t1x  apertium-fr-ca.ca.dix  apertium-fr-ca.ca.tsx  apertium-fr-ca.fr-ca-poly.dix  apertium-fr-ca.fr-ca.dix  apertium-fr-ca.fr-ca.t1x  apertium-fr-ca.fr-ca.t1x-new  apertium-fr-ca.fr.metadix  apertium-fr-ca.fr.tsx  apertium-fr-ca.post-ca.dix  apertium-fr-ca.post-fr.dix  apertium-fr-ca.trules-ca-fr.xml  apertium-fr-ca.trules-fr-ca.xml  apertium-fr-es.fr-es.t2x  apertium-fr-es.fr-es.t3x  apertium-fra-cat.cat-fra.l2x  apertium-fra-cat.cat-fra.lrx  apertium-fra-cat.cat-fra.metalrx  apertium-fra-cat.cat-fra.t1x  apertium-fra-cat.fra-cat.dix  apertium-fra-cat.fra-cat.l1x  apertium-fra-cat.fra-cat.lrx  apertium-fra-cat.fra-cat.lsx  apertium-fra-cat.fra-cat.metalrx  apertium-fra-cat.fra-cat.t1x  ca-fr-supervised.make  ca-fr-unsupervised.make  carregar_lexic.pl  configure.ac  filter.xsl  fr-ca-unsupervised.make  (+4 more)
CVS/: Entries
ca-tagger-data/CVS/: Entries
dev/: adj  adj-GD  g-verbs  verbs
dev/testvoc/: inconsistency.sh  testvoc-summary.cat-fra.txt  testvoc-summary.fra-cat.txt  testvoc.sh
fr-tagger-data/CVS/: Repository
tags/release-0.9.0/: apertium-fr-ca.ca.tsx  apertium-fr-ca.trules-fr-ca.xml  ca-fr-supervised.make  ca-fr.prob  configure.ac  fr-ca-supervised.make
tags/release-1.0.0/: Makefile.am  apertium-fr-ca.ca.tsx  apertium-fr-ca.fr-ca.dix  apertium-fr-ca.post-fr.dix  autogen.sh  buscaPar.xsl  configure.ac  fr-ca-supervised.make
tags/release-1.0.0/fr-tagger-data/: README
tags/release-1.0.0/tags/release-0.9.0/: Makefile.am  apertium-fr-ca.fr.tsx  autogen.sh  buscaPar.xsl  ca-fr-unsupervised.make  fr-ca-unsupervised.make  modes.xml  principal.xsl
tags/release-1.0.0/tags/release-0.9.0/CVS/: Repository
tags/release-1.0.0/tags/release-0.9.0/ca-tagger-data/CVS/: Repository  Root
test/: cat-fra-autoseq-expected.txt  cat-fra-biltrans-expected.txt  cat-fra-disam-expected.txt  cat-fra-generator-expected.txt  cat-fra-input.txt  cat-fra-lex-expected.txt  cat-fra-morph-expected.txt  cat-fra-postgen-expected.txt  cat-fra-postgen-gold.txt  cat-fra-pretransfer-expected.txt  fra-cat-autoseq-expected.txt  fra-cat-biltrans-expected.txt  fra-cat-chunker2-expected.txt  fra-cat-disam-expected.txt  fra-cat-generator-expected.txt  fra-cat-input.txt  fra-cat-lex-expected.txt  fra-cat-morph-expected.txt  fra-cat-postgen-expected.txt  fra-cat-postgen-gold.txt  tests.json
texts/: cuento.cat.txt
