#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.52)

AC_INIT([apertium-fr-ca], [1.0.0], [sortiz@users.sourceforge.net])
AM_INIT_AUTOMAKE([apertium-fr-ca], [1.0.0], no-define)
AC_PROG_LN_S
AC_PROG_AWK
AC_CONFIG_HEADER([config])

PKG_CHECK_MODULES(APERTIUM, apertium-3.0 >= 3.0.0)


AC_OUTPUT([Makefile])
